--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ eth-utils==2.3.1
 exceptiongroup==1.2.0
 executing==2.0.1
 fonttools==4.47.0
+galois==0.3.7
 ipykernel==6.29.0
 ipython==8.20.0
 jedi==0.19.1
@@ -19,10 +20,12 @@ jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
 libnum==1.7.1
+llvmlite==0.41.1
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 nest-asyncio==1.6.0
-numpy==1.26.3
+numba==0.58.1
+numpy==1.25.2
 packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
@@ -43,4 +46,5 @@ stack-data==0.6.3
 toolz==0.12.0
 tornado==6.4
 traitlets==5.14.1
+typing_extensions==4.9.0
 wcwidth==0.2.13
